gitops/apps/twenty/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: twenty
  labels:
    name: twenty
